Fixed msg wrapping and adjusted button positioning

--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@
 }
 
 .menutxt {
+    display: block;
     word-wrap: break-word;
     width: 405px;
 }
